## Solve
- fix uthash sizeof issue (1000 items)
- fix char pointer key issue (hash)
- modbus_connect hang issue (timeout)
- handle 'reset by peer' issue 

---

## Done
- libmodbus version number
- keep connection 
- FC(1~6, 15, 16)
- FC argument
- daemon version number
- syslog (flag)
- read config
- default config


## TODO List
- daemon pid